--- a/chatapplication.client/src/assets/styles/ChatStyle.css
+++ b/chatapplication.client/src/assets/styles/ChatStyle.css
@@ -21,70 +21,72 @@ html {
 body {
     margin-bottom: 60px;
 }
+h2 {
+    text-shadow:1px 1px 2px white;
+/*    float:left;*/
+}
+
+.chat-header {
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+
+    align-items: center;
+}
+
+
+.a, .b {
+    margin-left: auto;
+   
+}
+
+li.b {
+    /*    margin-right:10px;*/
+    margin-right: 10px;
+}
+
+
+.hamburger-react {
+  
+}
 
 div .wrapper {
-    border: 4px solid black;
-/*    display: grid;*/
-/*    grid-template-columns: 1fr;*/
-    /*    grid-template-rows:2fr 1fr;*/
-/*    width: fit-content;*/
+    border: 1px solid gray;
+    overflow:hidden;
     width: 75vw;
     margin: 0 auto;
     border-radius: 30px;
-    height:75vh;
+    height: 75vh;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
     /*    max-height:600px;*/
 }
 
 div .chatview {
-    /*    overflow-y:auto;*/
-    text-align:initial;
-
+    text-align: initial;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
     display: grid;
-    border: 1px dotted black;
-    /*margin:0;*/
-    /*    max-width: 100%;*/
-/*    height: 100%;*/
-height:60%;
+
+    height: 60%;
     overflow-y: scroll;
-    background-color: #F9F9E0;
     max-height: 500px;
-/*    width: inherit;*/
-/*    min-width: 90%;*/
+
     padding: 10px;
-    margin: 5% 5% 1% 5%;
-}
-
-table.chatmessage {
-    height:fit-content;
-    table-layout:auto;
-    
-}
-
-td.avatar {
-    width:10%;
-
+    margin: 0 5% 1% 5%;
 }
 
 div.chat-input-container {
     margin: 0 5% 5% 5%;
     height: 10%;
-    display: flex /*  grid-template-columns:90% 10%;*/
+    display: flex 
 }
 
-div.txt{
-
-}
 textarea {
-    /*    float:left;*/
-    /*    resize: none;
-    width: 100%;
-    height: 100%;
-    overflow-y:scroll;
-    
-    margin:0;*/
     display: inline-block;
     width: 90%;
     resize: none;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    border:none;
 }
 
 div.btn {
@@ -94,11 +96,118 @@ div.btn {
 
 }
 .send-button {
-/*    width: 100%;
-    margin: 0;*/
-border-radius:0px 10px 10px 0px;
-padding:initial;
+
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    border-radius: 0px 10px 10px 0px;
+    padding: initial;
     display: inline-block;
-    width: 10%;
-   background-color:paleturquoise
+    width: 15%;
+
+}
+
+    .send-button:hover {
+        box-shadow: inset 0 0 10px white;
+    }
+
+
+
+.chatmessage .chat-row {
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.chatmessage.own-message .chat-row {
+    flex-direction: row-reverse;
+}
+
+.chatmessage.own-message .chat-row .username-date {
+    flex-direction: row-reverse;
+}
+    .chatmessage.own-message .chat-row .message {
+        border-radius: 10px 0 10px 10px;
+/*        text-align:right;*/
+    }
+
+    .chatmessage.own-message .chat-row .username {
+        border-radius: 10px 0px 0 0;
+    }
+    .chatmessage.own-message .chat-row .date {
+        padding-left: initial;
+        padding-right:2px;
+    }
+
+.chatmessage .avatar {
+/*    align-items:center;*/
+max-height:45px;
+/*margin-top:10px;*/
+}
+.chatmessage .avatar img {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+
+}
+
+.chat-bubble {
+/*    background-color: #f1f1f1;*/
+    padding: 10px 0px;    
+    border-radius: 10px;
+    max-width: 60%;
+}
+
+.chatmessage.own-message .first-color {
+    /*    background-color: #dcf8c6;*/
+    background: #a6c6f5;
+}
+
+.message {
+/*    background-color: #ffcece;*/
+    /*    margin:0;*/
+    border-radius: 0 10px 10px 10px;
+    padding: 3px;
+    
+}
+
+    .message p {
+        margin: 0;
+        padding: 5px;
+        word-break: break-word;
+    }
+.username-date {
+    display: flex;
+    font-size: 0.9rem;
+   
+}
+
+.username {
+
+    padding: 5px 5px 5px 5px;
+    border-radius: 0px 10px 0 0;
+}
+
+.date {
+    background-color: none;
+    align-content:center;
+    opacity: 0.8;
+    font-style:italic;
+    padding-left:2px;
+}
+
+.first-color {
+    background: #cadefc;
+}
+
+.second-color {
+
+    background: #defcf9;
+}
+
+.third-color {
+
+    background: #FBF8FF;
+}
+
+.fourth-color {
+    background: #cca8e9;
 }
