--- a/chatapplication.client/src/assets/styles/ChatStyle.css
+++ b/chatapplication.client/src/assets/styles/ChatStyle.css
@@ -194,6 +194,8 @@ max-height:45px;
     padding-left:2px;
 }
 
+
+
 .first-color {
     background: #cadefc;
 }
@@ -211,3 +213,24 @@ max-height:45px;
 .fourth-color {
     background: #cca8e9;
 }
+
+
+/* The animation code */
+/*@keyframes newmessage {
+    from {
+        background-color: red;
+    }
+
+    to {
+        background-color: yellow;
+    }
+}*/
+
+/* The element to apply the animation to */
+/*div {
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    animation-name: example;
+    animation-duration: 4s;
+}*/
