--- a/chatapplication.client/src/assets/styles/ChatStyle.css
+++ b/chatapplication.client/src/assets/styles/ChatStyle.css
@@ -194,7 +194,9 @@ max-height:45px;
     padding-left:2px;
 }
 
-
+a:hover {
+    text-decoration:underline;
+}
 
 .first-color {
     background: #cadefc;
