--- a/chatapplication.client/src/assets/styles/ChatStyle.css
+++ b/chatapplication.client/src/assets/styles/ChatStyle.css
@@ -75,6 +75,13 @@ div .chatview {
     margin: 0 5% 1% 5%;
 }
 
+div.loading {
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin:auto;
+}
+
 div.chat-input-container {
     margin: 0 5% 5% 5%;
     height: 10%;
